<resources>
    <string name="app_name">Calcu Covid</string>
    <string name="instrucciones_tema"><![CDATA[Selecciona a continuación tus caracteristicas:]]></string>
    <string name="instrucciones_sexo"><![CDATA[Selecciona tu sexo:]]></string>
    <string name="radio_group_sexo_1"><![CDATA[Mujer]]></string>
    <string name="radio_group_sexo_2"><![CDATA[Hombre]]></string>
    <string name="texto_edad"><![CDATA[Escribe tu edad:]]></string>

    <string-array name="edades">
        <item>0</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </string-array>

    <string name="texto_peso"><![CDATA[Selecciona tu peso:]]></string>
    <string name="opcion_peso_1"><![CDATA[Bajo peso]]></string>
    <string name="opcion_peso_2"><![CDATA[Peso normal]]></string>
    <string name="opcion_peso_3"><![CDATA[Sobrepeso]]></string>
    <string name="opcion_peso_4"><![CDATA[Obesidad]]></string>
    <string name="texto_padecimientos"><![CDATA[Seleccione si padecé de algún padecimiento:]]></string>
    <string name="check_padecimiento_1"><![CDATA[Hipertensión]]></string>
    <string name="check_padecimiento_2"><![CDATA[Diabetes]]></string>
    <string name="check_padecimiento_3"><![CDATA[EPOC]]></string>
    <string name="check_padecimiento_4"><![CDATA[Enfermedad Renal]]></string>
    <string name="check_padecimiento_5"><![CDATA[Inmunosupresión]]></string>
    <string name="btn_calcular"><![CDATA[Calcular]]></string>

    <style name="shadoweffect"> <item name="android:paddingLeft">4px</item> <item name="android:paddingBottom">4px</item> <item name="android:textColor">#FFFFFF</item> <item name="android:textSize">25sp</item> <item name="android:shadowColor">#000000</item> <item name="android:shadowDx">0</item> <item name="android:shadowDy">0</item> <item name="android:shadowRadius">3</item> </style>
</resources>